# SideEffects

./: CMakeLists.txt
side-effects/: CMakeLists.txt  action.hpp  hooks.hpp  model.hpp  reducer.hpp  side-effects.cpp  side-effects.hpp  state.hpp  store.hpp
